Fix issue that caused body to overflow

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -9,7 +9,6 @@
   justify-content: center;
   position: sticky;
   top: 0;
-  width: 100vw;
 }
 
 .links {
